--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <canvas id="canvas"></canvas>
     <script src="./three.min.js"></script>
     <script src="./script.js"></script>
 </body>
